[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/header_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme/menu_button.tres" type="Theme" id=2]
[ext_resource path="res://fonts/message_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://sound/set_button.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/press_button.wav" type="AudioStream" id=5]
[ext_resource path="res://script/level_select.gd" type="Script" id=6]
[ext_resource path="res://script/rich_text_siny.gd" type="Script" id=7]
[ext_resource path="res://img/arrow_small.png" type="Texture" id=8]
[ext_resource path="res://img/arrow_small_l.png" type="Texture" id=9]
[ext_resource path="res://material/world1.tres" type="Material" id=10]
[ext_resource path="res://img/textures/concrete.png" type="Texture" id=11]
[ext_resource path="res://theme/red_panel.tres" type="Theme" id=12]
[ext_resource path="res://theme/button.tres" type="Theme" id=13]
[ext_resource path="res://scene/worm/SpawnKinematic.tscn" type="PackedScene" id=14]
[ext_resource path="res://script/texture_sampler.gd" type="Script" id=15]
[ext_resource path="res://sound/unset_button.wav" type="AudioStream" id=16]
[ext_resource path="res://music/short-drum loop.wav" type="AudioStream" id=17]

[sub_resource type="RichTextEffect" id=1]
script = ExtResource( 7 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
material = ExtResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
script = ExtResource( 15 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0

[node name="SpawnKinematic" parent="ViewportContainer/Viewport" instance=ExtResource( 14 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 3

[node name="Panel" type="Panel" parent="."]
margin_left = 393.0
margin_top = 18.0
margin_right = 433.0
margin_bottom = 58.0
rect_scale = Vector2( 6, 4.2 )
theme = ExtResource( 12 )

[node name="Panel2" type="Panel" parent="."]
margin_left = 9.0
margin_top = 240.0
margin_right = 53.0
margin_bottom = 280.0
rect_scale = Vector2( 3.36, 3.2 )
theme = ExtResource( 12 )

[node name="LevelInfo" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 30.0

[node name="Title" type="RichTextLabel" parent="LevelInfo"]
margin_right = 1024.0
margin_bottom = 45.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]level select[/center]"
text = "level select"
fit_content_height = true
custom_effects = [ SubResource( 1 ) ]

[node name="World" type="HBoxContainer" parent="LevelInfo"]
margin_top = 49.0
margin_right = 1024.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="LevelInfo/World"]
margin_top = 9.0
margin_right = 397.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Previous" type="Button" parent="LevelInfo/World"]
margin_left = 401.0
margin_right = 433.0
margin_bottom = 32.0
focus_neighbour_right = NodePath("../Next")
focus_neighbour_bottom = NodePath("../../Level/Previous")
theme = ExtResource( 2 )
disabled = true
icon = ExtResource( 9 )

[node name="Name" type="RichTextLabel" parent="LevelInfo/World"]
margin_left = 437.0
margin_right = 587.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]world name[/center]"
text = "world name"
fit_content_height = true

[node name="Next" type="Button" parent="LevelInfo/World"]
margin_left = 591.0
margin_right = 623.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../Previous")
focus_neighbour_bottom = NodePath("../../Level/Next")
focus_mode = 0
theme = ExtResource( 2 )
disabled = true
icon = ExtResource( 8 )

[node name="Label2" type="Label" parent="LevelInfo/World"]
margin_left = 627.0
margin_top = 9.0
margin_right = 1024.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Level" type="HBoxContainer" parent="LevelInfo"]
margin_top = 85.0
margin_right = 1024.0
margin_bottom = 117.0

[node name="Label4" type="Label" parent="LevelInfo/Level"]
margin_top = 9.0
margin_right = 397.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Previous" type="Button" parent="LevelInfo/Level"]
margin_left = 401.0
margin_right = 433.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../../World/Previous")
focus_neighbour_right = NodePath("../../World/Next")
theme = ExtResource( 2 )
icon = ExtResource( 9 )

[node name="Name" type="RichTextLabel" parent="LevelInfo/Level"]
margin_left = 437.0
margin_right = 587.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]level name[/center]"
text = "level name"
fit_content_height = true

[node name="Next" type="Button" parent="LevelInfo/Level"]
margin_left = 591.0
margin_right = 623.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../Previous")
focus_neighbour_top = NodePath("../../World/Next")
theme = ExtResource( 2 )
icon = ExtResource( 8 )

[node name="Label3" type="Label" parent="LevelInfo/Level"]
margin_left = 627.0
margin_top = 9.0
margin_right = 1024.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Tally" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 16.0
margin_right = 29.0
alignment = 1

[node name="Eggs" type="Label" parent="Tally"]
margin_top = 260.0
margin_right = 72.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 3 )
text = "eggs 0/0"

[node name="Fossils" type="Label" parent="Tally"]
margin_top = 288.0
margin_right = 72.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 3 )
text = "fossils 0/0"

[node name="Time" type="Label" parent="Tally"]
margin_top = 316.0
margin_right = 72.0
margin_bottom = 340.0
custom_fonts/font = ExtResource( 3 )
text = "time 0:00"

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -44.0
margin_right = 12.0
margin_bottom = -16.0
focus_neighbour_top = NodePath("../LevelInfo/Level/Next")
focus_neighbour_right = NodePath("../Start")
theme = ExtResource( 13 )
text = "back"

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -44.0
margin_right = 75.0
margin_bottom = -16.0
rect_min_size = Vector2( 150, 0 )
focus_neighbour_left = NodePath("../Back")
focus_neighbour_top = NodePath("../LevelInfo/Level/Next")
focus_neighbour_right = NodePath("../Skins")
theme = ExtResource( 13 )
text = "start"

[node name="Skins" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -44.0
margin_right = -16.0
margin_bottom = -16.0
focus_neighbour_left = NodePath("../Start")
focus_neighbour_top = NodePath("../LevelInfo/Level/Next")
theme = ExtResource( 13 )
text = "skins"

[node name="Sounds" type="Node" parent="."]

[node name="PressButton" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "UI"

[node name="NavigateForward" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -20.0
bus = "UI"

[node name="NavigateBackward" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )
volume_db = -20.0
bus = "UI"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="Tween" type="Tween" parent="."]
